# PersonenZ-hler

./: .gitignore  README.md  index.html  monitor_viewer.py  pi_connection.py  pi_download.py  pi_ssh.py  pi_upload.py  pyproject.toml  requirements.txt
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
artifacts/display_pipeline/: DISPLAY_FIX_RESULT.md
artifacts/global_counter_fix/: FINAL_REAL_COUNTER_ACCEPTANCE.md
artifacts/hailo10h_yolo26m/: STEP_1_RESULT.md  hailo_apps_code_inspection.txt  hailo_apps_fetch_refs.txt  hailo_apps_inspection.txt  local_backup.txt  (+30 more)
config/: api.env.example  config.example.yaml  config.yaml
docs/: ANDROID_APP.md  DEPLOYMENT_AND_RECOVERY.md  DUAL_CAMERA_VALIDATION.md  FINAL_YOLO26X_STATUS.md  LATENCY_ANALYSIS_AND_OPTIMIZATION.md  MONITORING_REFERENCE.md  PRIVACY_AND_SECURITY.md  PRIVACY_NOTICE_TEMPLATE.md  model_toolchain_manifest.md
models/: config_onnx_yolo26m.json  model_manifest.json  yolo26m_postprocessing.onnx
scripts/: check_hardware.sh  cleanup_old_models.py  generate_secrets.py  install.sh  install_autostart.sh  install_desktop_icon.sh  latency_benchmark.py  performance_smoke.py  start.sh  start_gui.sh  status_api.py  stop.sh  wifi_direct_mode.sh  wifi_home_mode.sh  wifi_status.sh
systemd/: personenzaehler-mdns-user.service  visitor-counter-mobile-api-user.service  visitor-counter-status-api.service  visitor-counter-user.service  visitor-counter.service
tools/: build_gui_counter_explanation_doc.py  deploy_pi_live_counter_fix.ps1
training/: README.md  requirements-lock.txt
(+110 files in other folders)
